--- a/templates/post.html
+++ b/templates/post.html
@@ -6,12 +6,12 @@
 	<div id="header">
 		<h1>Title</h1>
 		<h2>Subtitle</h2>
-		<h4 id="date">Date</h4>
+		<h3 id="date">Date</h3>
 	</div>
 
 	<!-- content -->
 	<div id='content'>
-		{{ post_content }}
+		{{ post.html|safe }}
 	</div>
 
 {% endblock content %}
