Updated structure so that static files are now served properly

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,9 @@
 		{% block head %}
 			<title>designhawg</title>
 		{% endblock head %}
+		<!-- stylesheets -->
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/foundation.min.css') }}">
 	</head>
 	<body>
 		{% block content %}
