made further adjustments to date

--- a/templates/post.html
+++ b/templates/post.html
@@ -14,7 +14,7 @@
 			{% if post.subtitle %}
 				<h2>{{ post.subtitle }}</h2>
 			{% endif %}
-			<p id="date">{{ post.date }}</p>
+			<p id="date">{{ post.date|date }}</p>
 		</div>
 		<!-- content -->
 		<div id='content'>
