--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 		<!-- stylesheets -->
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/foundation.min.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 	</head>
 	<body>
 		{% block content %}
