--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,23 @@
 {% endblock head %}
 
 {% block content %}
-	<div id="header">
-		<h1>My awesome stuff</h1>
-	</div>
-
-	<div id="posts">
-		{% for post in posts %}
-			<div class='post'>
-				<span class="post-date">{{ post.date|date }}</span>
-				<a href="{{ post.url }}" class="post-title">
-					{{ post.title }}{% if post.subtitle %}: {{ post.subtitle }} {% endif %}
-				</a>
+	<div class="row">
+		<div class="large-8 large-centered columns">
+			<div id="header">
+				<h1>My awesome stuff</h1>
 			</div>
-		{% endfor%}
+
+			<div id="posts">
+				{% for post in posts %}
+					<div class='post'>
+						<span class="post-date">{{ post.date|date }}</span>
+						<a href="{{ post.url }}" class="post-title">
+							{{ post.title }}{% if post.subtitle %}: {{ post.subtitle }} {% endif %}
+						</a>
+					</div>
+				{% endfor%}
+			</div>
+		</div>
 	</div>
 
 {% endblock content %}
