--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,35 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/foundation.min.css') }}">
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+		<script src="{{ url_for('static', filename='js/vendor/modernizr.js')}}"></script>
+		<script src="{{ url_for('static', filename='js/vendor/jquery.js')}}"></script>
+		<script src="{{ url_for('static', filename='js/vendor/fastclick.js')}}"></script>
+		<script src="{{ url_for('static', filename='js/foundation.min.js')}}"></script>
+		<script src="{{ url_for('static', filename='js/foundation/foundation.offcanvas.js')}}"></script>
 	</head>
 	<body>
+		<div class="off-canvas-wrap" data-offcanvas>
+			<div class="inner-wrap">
+				<a class="left-off-canvas-toggle" href="#">Menu</a>
+				<!-- Off Canvas Menu -->
+				<aside class="left-off-canvas-menu">
+					<!-- Whatever you want can go here -->
+					<ul>
+						<li><a href="#">Item 1</a></li>
+					</ul>
+				</aside>
+				<!-- main content goes here -->
+				<p>Set in the year 0 F.E.</p>
+			<!-- close the off-canvas menu -->
+			<a class="exit-off-canvas"></a>
+			</div>
+		</div>
 		{% block content %}
 		{% endblock content %}
+
+		<script>
+			$(document).foundation();
+		</script>
 
 	</body>
 </html>
