--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,12 @@
 		<script src="{{ url_for('static', filename='js/vendor/fastclick.js')}}"></script>
 		<script src="{{ url_for('static', filename='js/foundation.min.js')}}"></script>
 		<script src="{{ url_for('static', filename='js/foundation/foundation.offcanvas.js')}}"></script>
+		<!-- atom feed -->
+		<link href="{{ url_for('feed') }}"
+			rel="alternate"
+			title="Recent Changes"
+			type="application/atom+xml">
+
 	</head>
 	<body>
 		<div class="off-canvas-wrap" data-offcanvas>
