--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,20 @@
-body {
-	background-color: green;
+.fans {
+	background: url(https://s3.amazonaws.com/gifbase/hawks_kings/fans.gif);
+	background-size: cover;
+	height: 100%;
 }
+
+.redover {
+	background-color: rgba(117, 0, 8, 0.8);
+		height: 100%;
+
+}
+
+.pad-top {
+	padding-top: 100px;
+}
+
+h2 {color: #dadada;}
 
 #header {
 	margin-top: 100px;
@@ -11,4 +25,19 @@ body {
 .stuff {
 	height: 100px;
 	width: 100px;
+}
+
+.games {
+	margin-top: 40px;
+}
+
+.game-link {
+	padding: 10px;
+	background-color: rgba(119, 119, 119, 0.7);
+	color: #dadada;
+}
+
+.game-link:hover {
+	background-color: rgba(250, 250, 250, 0.6);
+	color: #333;
 }
